--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,12 @@
 html, body {
 	width: 100%;
 }
+
+.canvas-container { 
+	border: 1px dotted #ccc; 
+	display: block; 
+	vertical-align: top; 
+	-webkit-tap-highlight-color: rgba(0,0,0,0); 
+	background-color: grey;
+	margin: 5px 0;
+}
